# fastapi-celery-redis

./: .gitignore  README.md  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 23080b1b47fc_added_password_hash.py  7d0558569ad3_add_reviews_table.py  9d13f48b3228_added_role_to_users.py  a408084496c1_rating_datatype_altered.py  bf9cc79bcb27_init.py  e2d0a568bf2b_relate_users_to_books.py
src/app/: main.py
src/app/auth/: dependecies.py  routes.py  schemas.py  service.py
src/app/books/: routes.py  schemas.py  service.py
src/app/db/: database.py  redis.py
src/app/models/: models.py
src/app/reviews/: routes.py  schemas.py  service.py
src/app/utils/: celery_tasks.py  config.py  errors.py  mail.py  middleware.py  security.py
